# qrcode-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  qrcode-cli.code-workspace
docs/: README_en.md
src/: main.rs
