[package]
name = "qrcli"
version = "1.0.2"
edition = "2021"
categories = ["development-tools::procedural-macro-helpers", "parser-implementations"]
description = "A QRCode cli tools, can encode and decode"

keywords = ["qrcode", "cli"]
license = "MIT"
repository = "https://github.com/MarioMang/qrcode-cli"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
image = { version = "0.24.5", features = ["rgb"] }
qrcode = "0.12.0"
qrcode-png = "0.4.1"
rqrr = "0.6.0"

[[bin]]
name = "qrcli"
path = "src/main.rs"
